# vek

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  build.rs
.github/workflows/: on_push_and_prs.yml
ci/: script.sh
examples/bin-with-optional-dependencies/: Cargo.toml
examples/bin-with-optional-dependencies/src/: main.rs
examples/inspect-asm/: Cargo.toml
examples/inspect-asm/src/: lib.rs
examples/llvm_compile_errors/: Cargo.toml
examples/llvm_compile_errors/src/: main.rs
examples/simd_intrinsics_compile_errors/: .gitignore  Cargo.toml
examples/simd_intrinsics_compile_errors/src/: main.rs
previous_work/vek/: Cargo.toml  README.md
previous_work/vek/src/: bezier.rs  clamp.rs  color_component.rs  geom.rs  lerp.rs  lib.rs  mat.rs  quaternion.rs  tween.rs  vec.rs  wrap.rs
previous_work/vek2/: Cargo.toml
previous_work/vek2/src/: faq.rs  lib.rs  lib_old.rs  todo.rs
src/: .lib.rs.swp  .vec.rs.swp  bezier.rs  frustum.rs  geom.rs  geom_macros.rs  lib.rs  mat.rs  ops.rs  quaternion.rs  rect.rs  simd_llvm.rs  simd_traits.rs  transform.rs  transition.rs  tween.rs  vec.rs  vtest.rs
