[package]
version = "0.10.0" # remember to update html_root_url in src/lib.rs
authors = ["Yoan Lecoq <yoanlecoq.io@gmail.com>", "Joshua Barretto <joshua.s.barretto@gmail.com>", "Sunjay Varma <varma.sunjay@gmail.com>", "timokoesters <timo@koesters.xyz>", "Imbris <imbrisf@gmail.com>"]
description = "Generic 2D-3D math swiss army knife for game engines, with SIMD support and focus on convenience."
documentation = "https://docs.rs/vek"
keywords = ["vector", "matrix", "simd", "quaternion", "bezier"]
categories = [ "algorithms", "data-structures", "no-std", "science" ]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/yoanlcq/vek"
name = "vek"
build = "build.rs"
exclude = [
    "ci/*",
    "appveyor.yml",
    ".travis.yml",
]
edition = "2018"

[badges]
travis-ci = { repository = "yoanlcq/vek" }
appveyor  = { repository = "yoanlcq/vek" }
maintenance = { status = "experimental" }

[features]
default = ["repr_simd", "rgba", "rgb", "std"]
# NOTE: The below ones (commented out) are enforced, because doc tests assume their availability.
# vec2 = []
# vec3 = []
# vec4 = []
# mat4 = []
# mat2 = []
# mat3 = []
# extent2 = []
# extent3 = []
# geom = []
# quaternion = []
# bezier = []
vec8 = []
vec16 = []
vec32 = []
vec64 = []
rgb = []
rgba = []
uv = []
uvw = []
repr_simd = []
std = ["num-traits/std", "serde/std"]
libm = ["num-traits/libm"]

[build-dependencies]
rustc_version = "~0.2.3"

[dependencies]
approx = { version = "~0.3.2", default-features = false }
num-traits = { version = "~0.2.11", default-features = false }
num-integer = { version = "~0.1.42", default-features = false }
static_assertions = "~1.1.0"
image = { version = "~0.17", optional = true, default-features = false }
serde = { version = "~1.0.105", optional = true, default-features = false, features = ["derive"] }
mint = { version = "~0.5.4", optional = true }
# clippy = { version = "0.0.166", optional = true }

[target.'cfg(any(target_arch="x86", target_arch="x86_64"))'.dependencies]
x86intrin = { version = "0.4", optional = true }
