[package]
authors = ["Yoan Lecoq <yoanlecoq.io@gmail.com>"]
description = "(placeholder) Colorful vector+matrix+quaternion+basic shapes library for graphics, with focus on intent and the small bits that make you happier as a user."
documentation = "https://docs.rs/vek"
keywords = ["vector", "quaternion", "matrix", "rect", "bezier"]
categories = [ "algorithms", "data-structures", "no-std", "science" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/yoanlcq/fate"
name = "vek"
version = "0.1.0" # remember to update html_root_url

[dependencies]
num-traits = "0.1.39"
num-integer = "0.1.34"
